fix jumper position

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -92,7 +92,7 @@ input {
 /* Jumper */
 
 .jumper-button {
-  position: fixed;
+  position: absolute;
   width: 50px;
   height: 50px;
   border-radius: 50%;
